Bug 114045 - Undo after Clone Formatting changes formatting of entire table
Summary: Undo after Clone Formatting changes formatting of entire table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0 target:6.0.1
Keywords:
Depends on:
Blocks: Undo-Redo
  Show dependency treegraph
 
Reported: 2017-11-25 16:15 UTC by Gerald Pfeifer
Modified: 2018-04-01 21:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document (564.94 KB, application/vnd.oasis.opendocument.presentation)
2017-11-25 16:15 UTC, Gerald Pfeifer
Details
Screenshort before the undo (84.56 KB, image/png)
2017-11-25 16:22 UTC, Gerald Pfeifer
Details
Screenshort after the undo (118.08 KB, image/png)
2017-11-25 16:23 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2017-11-25 16:15:59 UTC
Created attachment 137981 [details]
Sample document

How to reproduce:

 1. Open attached document
 2. Change text background color of the ONE cell (or probably any other).
 3. Clone formatting to the TWO/THREE/FOUR/FIVE cells (or probably others).
 4. Undo and observe how font SIZES(!) change across the table.
Comment 1 Gerald Pfeifer 2017-11-25 16:22:18 UTC
> How to reproduce:
> 
>  1. Open attached document
>  2. Change text background color of the ONE cell (or probably any other).
>  3. Clone formatting to the TWO/THREE/FOUR/FIVE cells (or probably others).
>  4. Undo and observe how font SIZES(!) change across the table.

This reproduces _trying_ to clone text background color, which does not
seem to work, though (but that's another issue).

Best simply use text color or strike through formatting.
Comment 2 Gerald Pfeifer 2017-11-25 16:22:50 UTC
Created attachment 137982 [details]
Screenshort before the undo
Comment 3 Gerald Pfeifer 2017-11-25 16:23:21 UTC
Created attachment 137983 [details]
Screenshort after the undo
Comment 4 Telesto 2017-11-25 20:38:52 UTC
Repro with:
Version: 6.0.0.0.alpha1+
Build ID: c24c32bf71b8e64bd0d36e511f554e1f6c015842
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-11-22_23:15:41
Locale: nl-NL (nl_NL); Calc: group threaded

and with
Version: 5.2.5.0.0+
Build ID: 78223678b7513ffe46804cb08f2dc5bc899b2bab
CPU Threads: 4; OS Version: Windows 6.29; UI Render: default; 
Locale: nl-NL (nl_NL); Calc: CL

and with
Versie: 4.1.0.4 
Build ID: 89ea49ddacd9aa532507cbf852f2bb22b1ace28
Comment 5 Jacques Guilleron 2017-11-26 11:00:27 UTC
Hi Gerald, Telesto,

Reproduced with
LO 6.0.0.0.alpha1+ Build ID: 133d617a7758acb342d82e5d446e165cd87e2cac
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-11-18_01:48:12
Locale: fr-FR (fr_FR); Calc: CL
also with
LO 3.5.3.2 Version ID : 235ab8a-3802056-4a8fed3-2d66ea8-e241b80
so probably inherited from OOo.
Comment 6 Commit Notification 2017-12-31 07:34:48 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=140aa3e7db0a4731f02ab078a1326b2f4523a4c5

tdf#114045 do not add undo action for table attributes

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Michal Svec 2018-01-25 15:17:35 UTC
Any chance we have this patch included already in 6.0.x?
6.1 seems to be way in the future AFAICS.

Thanks!
Comment 8 Jacques Guilleron 2018-01-25 16:48:43 UTC
Hi all,

Works as excepted in
LO 6.1.0.0.alpha0+
Build ID: 6fc9d4a482ab50a1bf8fefb1dae2a6ded3c7e3dd
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-01-24_04:37:19
Locale: fr-FR (fr_FR); Calc: CL
Thank you Mark.
Can we hope to find the fix also in the LO 6.0 version?
Comment 9 Commit Notification 2018-02-01 20:32:44 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=520a00a7dd9772630346eb58bfe8c00790ec0920&h=libreoffice-6-0

tdf#114045 do not add undo action for table attributes

It will be available in 6.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Gerald Pfeifer 2018-03-28 21:53:04 UTC
There actually is one issue left: After the first undo step the color
is reverted, but the font size goes up from 9pt to 18pt and that requires
a second undo step.

Anyone else can reproduce this as well?

What's the best process to take it from here?
Comment 11 Mark Hung 2018-03-31 23:27:18 UTC
Gerald,

I'd prefer that you report a new issue. For what I've seen the format of the whole table isn't changed ( tested in 6.0.2 ). The bug description will no longer the same as the original one.