tdf#114045 do not add undo action for table attributes

CreateUndoAttrObject() create extra undo steps when using
table paint brush on table cells. Undo action for each selected
cell is processed individually in
SvxTableController::ApplyFormatPaintBrush().

Change-Id: I65034a2b510898db26a7a8ddc4b5f3b742fd9b88
Reviewed-on: https://gerrit.libreoffice.org/46729
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mark Hung <marklh9@gmail.com>
(cherry picked from commit 140aa3e7db0a4731f02ab078a1326b2f4523a4c5)
Reviewed-on: https://gerrit.libreoffice.org/48698
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>